crates/cella-testing/tests/ui/fail_unknown_runtime.rs
use cella_testing::runtime_test;

#[runtime_test(foobar)]
async fn test_unknown() {}

fn main() {}
